--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                   if (letter.length === currentText.length) {
                       count = (count + 1) % serverTypes.length;
                       index = 0;
-                      setTimeout(type, 1000); // Change the timeout according to your preference
+                      setTimeout(type, 1000); 
                   } else {
-                      setTimeout(type, 100); // Change the timeout according to your preference
+                      setTimeout(type, 100); 
                   }
               })();
           </script>
