--- a/index.html
+++ b/index.html
@@ -96,9 +96,17 @@
                   </div>
                 <p>Lorem Ipsum amet dolor sit amet, consectetur adipiscing elit. Nullam euismod, erat eget malesuada mattis.</p>
               </div>
+                        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
               <div class="bg-gray-800 rounded-lg shadow-md p-6">
-                  <h3 class="text-xl font-semibold mb-4">RAM</h3>
-                  <p class="text-gray-300">16 GB DDR4</p>
+                  <div class="max-w-5xl mx-auto text-center relative z-10">
+                      <img src="https://media.discordapp.net/attachments/1208104540012941383/1210733159608619048/5stars.png?ex=65eba21f&is=65d92d1f&hm=128d2cde11e652d298da34489c12daf2bee3301737334279229695e444409c6d&=&format=webp&quality=lossless&width=1021&height=308">
+                      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+                              <div class="text-center", style="text-alight: center">
+                              <h3 class="text-xl font-semibold mb-4 text-center", style="text-alight: center">Emerald</h3>
+                          </div>
+                      </div>
+                  </div>
+                <p>Lorem Ipsum amet dolor sit amet, consectetur adipiscing elit. Nullam euismod, erat eget malesuada mattis.</p>
               </div>
               <div class="bg-gray-800 rounded-lg shadow-md p-6">
                   <h3 class="text-xl font-semibold mb-4">Storage</h3>
